<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Library</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	
    <string name="home">首页</string>
    <string name="category">占座</string>
    <string name="setting">设置</string>
    <string name="seat_preview">座位预览</string>
    <string name="choose_seat">一键选座</string>
    
    <!-- 设置 --> 
    <string name="state">我的座位</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于我们</string>
    
    
    <string name="mobile_number">手机号</string>
    <string name="mobile_number_hint">方便我们尽快反馈。非必填</string>
    <string name="content_edit_hint">欢迎在这儿发表宝贵的意见哦</string>
    <string name="submit">提交</string>
    
    <string name="state_study">图书馆学霸</string>
    <string name="state_break">离开一会儿</string>
    
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="exit">注销登录</string>
    <string name="save_pw">记住密码</string>
    <string name="username_hint">  账号： 请输入用户名</string>
    <string name="password_hint">  密码： 请输入密码</string>
    
    <string name="register_name_hint">用户名</string>
    <string name="xuehao_hint">学号</string>
    <string name="card_num_hint">一卡通号</string>
    <string name="register_password_hint">密码</string>
    <string name="re_password_hint">确认密码</string>
    <string name="info">个人主页</string>
</resources>
